[gd_scene load_steps=2 format=3 uid="uid://dpkxn7u5yjfkl"]

[ext_resource type="Script" path="res://scripts/ui/recovered_part_card.gd" id="1"]

[node name="RecoveredPartCard" type="PanelContainer"]
custom_minimum_size = Vector2(350, 100)
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="HBox"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBox" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="NameLabel" type="Label" parent="HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = ""

[node name="RarityLabel" type="Label" parent="HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 11
text = ""

[node name="TimerLabel" type="Label" parent="HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = ""

[node name="Buttons" type="VBoxContainer" parent="HBox"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="UseButton" type="Button" parent="HBox/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Use"

[node name="FreezeButton" type="Button" parent="HBox/Buttons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Freeze ❄️"
